[package]
name = "rust_mermaid"
version = "0.1.1"
edition = "2021"
authors = ["Gioele SL Fierro <hck@gslf.it>"]
keywords = ["mermaidjs", "diagrams"]
categories = ["multimedia::images"]
license-file = "LICENSE.txt"
description = "Generate mermaid.js diagrams from Rust"
repository = "https://github.com/gslf/rust_mermaid"

[dependencies]
base64 = "0.21.2"
reqwest = {version = "0.11.18", features = ["blocking"]}
image = "0.24.6"

